<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/optionsMenu">
        <item android:id="@+id/action_update"
            app:showAsAction="always"
            android:icon="@drawable/ic_autorenew_black_24dp"
            android:title="@string/menu_Update" />
        <item android:id="@+id/action_add"
            app:showAsAction="collapseActionView"
            android:icon="@drawable/ic_add_location"
            android:title="@string/menu_Add" />
        <item android:id="@+id/action_delete"
            app:showAsAction="collapseActionView"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/menu_Delete" />
        <item android:id="@+id/action_share"
            app:showAsAction="collapseActionView"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/imgShare" />
    </group>
</menu>