<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/cardviews">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/evenSmallerMargin">

        <TextView
            android:id="@+id/txtTmp"
            style="@style/H4.tv"
            android:paddingEnd="@dimen/card_corner"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtTmpType"
            style="@style/OVERLINE.tv"
            android:layout_marginTop="@dimen/card_corner"
            app:layout_constraintStart_toEndOf="@id/txtTmp"
            app:layout_constraintTop_toTopOf="@id/txtTmp" />

        <ImageView
            android:contentDescription="@string/imgShare"
            android:id="@+id/imgShare"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/ic_share_white_24dp"
            app:layout_constraintStart_toEndOf="@id/txtTmp"
            app:layout_constraintTop_toBottomOf="@id/txtTmpType" />

        <TextView
            android:id="@+id/txtDesc"
            style="@style/Caption.tv"
            app:layout_constraintBottom_toTopOf="@+id/line1"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/line1"
            style="@style/lV"
            app:layout_constraintTop_toBottomOf="@id/txtTmp"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:contentDescription="@string/tmpMaxTitle"
            android:id="@+id/imgTmpMax"
            android:layout_width="@dimen/smallMargin"
            android:layout_height="@dimen/smallMargin"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_arrow_upward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/txtTmpMax"
            style="@style/OVERLINE.tv"
            android:layout_marginTop="4dp"
            android:alpha=".87"
            app:layout_constraintStart_toEndOf="@id/imgTmpMax"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <ImageView
            android:id="@+id/imgTmpMin"
            android:contentDescription="@string/tmpMinTitle"
            android:layout_width="@dimen/smallMargin"
            android:layout_height="@dimen/smallMargin"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_arrow_downward"
            android:layout_marginStart="@dimen/evenSmallerMargin"
            app:layout_constraintStart_toEndOf="@id/txtTmpMax"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/txtTmpMin"
            style="@style/OVERLINE.tv"
            android:layout_marginTop="4dp"
            android:alpha=".87"
            app:layout_constraintStart_toEndOf="@id/imgTmpMin"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/txtTime"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:gravity="center_horizontal"
            android:textColor="@color/textViews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/txtClock"
            style="@style/OVERLINE.tv"
            android:layout_marginBottom="@dimen/evenSmallerMargin"
            app:layout_constraintBottom_toBottomOf="@+id/txtTime"
            app:layout_constraintStart_toEndOf="@+id/txtTime" />

        <TextView
            android:id="@+id/txtDate"
            style="@style/Caption.tv3"
            android:layout_below="@+id/txtTime"
            android:alpha=".87"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTime" />

        <View
            android:id="@+id/line2"
            android:layout_marginTop="4dp"
            style="@style/lV"
            app:layout_constraintTop_toBottomOf="@+id/txtDate"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/evenSmallerMargin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <ImageView
                android:id="@+id/imgPressure"
                android:contentDescription="@string/pressureTitle"
                style="@style/img24"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_pressure" />

            <TextView
                android:text="@string/pressureTitle"
                style="@style/Caption.tv3" />

            <TextView
                android:id="@+id/txtPressure"
                style="@style/Caption.tv3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/evenSmallerMargin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <ImageView
                android:id="@+id/imgHumidity"
                android:contentDescription="@string/humidityTitle"
                style="@style/img24"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_humidity" />

            <TextView
                android:text="@string/humidityTitle"
                style="@style/Caption.tv3" />

            <TextView
                android:id="@+id/txtHumidity"
                style="@style/Caption.tv3"
                android:text="" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>